fix(namedallelematcher): improve checking for unexpected ALT